--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
+    background-color: aqua;
+
 }
 
 .profile {
     margin: 20px;
+    text-align: center;
+
 }
 
 h1[data-testid="slackUserName"] {
@@ -19,4 +23,12 @@ img[data-testid="slackDisplayImage"] {
     max-width: 200px;
     border-radius: 50%;
     margin: 20px auto;
+}
+
+a {font-size:1.5rem;
+    text-decoration: none;
+    color: #1279e0;
+    font-weight: 4rem;
+}
+a:hover{color: #0f0f0f;
 }
