--- a/style.css
+++ b/style.css
@@ -1,34 +1,56 @@
-/* styles.css */
 body {
     font-family: Arial, sans-serif;
     text-align: center;
+    background-color: blueviolet;
     margin: 0;
     padding: 0;
-    background-color: aqua;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .profile {
-    margin: 20px;
+    margin: 50px auto;
+    max-width: 600px;
+    height: 75vh;
     text-align: center;
-
+    background-color: #FFF;
+    width: 30vw;
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-h1[data-testid="slackUserName"] {
-    font-size: 24px;
+img {
+    width: 150px;
+    border-radius: 50%;
+    margin-right: 30px;
+    margin-left: 20px;
+    margin-bottom: auto;
+}
+
+a {
+    /* display: block; */
+    margin-top: 20px;
+    color: purple;
+    text-decoration: none;
+}
+a:hover{
+    background-color: #801818;
+}
+[data-testid="currentDayOfTheWeek"] {
     font-weight: bold;
 }
 
-img[data-testid="slackDisplayImage"] {
-    max-width: 200px;
-    border-radius: 50%;
-    margin: 20px auto;
+[data-testid="myTrack"] {
+    font-weight: 800;
 }
 
-a {font-size:1.5rem;
-    text-decoration: none;
-    color: #1279e0;
-    font-weight: 4rem;
-}
-a:hover{color: #0f0f0f;
+[data-testid="githubURL"] {
+    background-color: blueviolet;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 3px;
+    display: inline-block;
 }
